# midjourney-api

./: .env.example  .gitignore  .prospec.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README.zh-TW.md  alembic.ini  docker-compose.yml  install_deps.py  package.json  pnpm-lock.yaml  pyproject.toml  run.py  test_gateway.py  watchdog.sh
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_upscale_fields.py  e6de2c77be7c_initial_schema.py
prospec/: CONSTITUTION.md
prospec/ai-knowledge/: _conventions.md  _index.md  raw-scan.md
prospec/ai-knowledge/modules/api/: README.md  api-surface.md  dependencies.md  endpoints.md  patterns.md
prospec/ai-knowledge/modules/core/: README.md  api-surface.md  dependencies.md  patterns.md
prospec/ai-knowledge/modules/infra/: README.md  api-surface.md  dependencies.md  patterns.md
prospec/ai-knowledge/modules/models/: README.md  api-surface.md  dependencies.md  patterns.md
prospec/ai-knowledge/modules/providers-discord/: README.md  (+3 more)
specs/capabilities/: api-endpoints.md  auth-and-security.md  deployment.md  discord-integration.md  observability.md  quota-and-usage.md  task-management.md
specs/history/: add-auto-upscale.md  build-midjourney-relay-api.md
src/app/: config.py  exceptions.py  main.py
src/app/api/: deps.py
src/app/core/: concurrency.py  logging.py  upscale_tracker.py
src/app/middleware/: correlation_id.py
src/app/models/: __init__.py  api_key.py  base.py  task.py
src/app/providers/: protocol.py
src/app/schemas/: quota.py  task.py  usage.py
src/app/services/: imagine_service.py  quota_service.py  task_service.py  usage_service.py
src/mj_mcp/: .env.example  config.py  server.py  tracker.py
src/mj_mcp/discord/: correlation.py  gateway.py  interaction.py  parser.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_auth.py  test_concurrency.py  test_discord.py  test_imagine.py  test_models.py  test_protocol.py  test_services.py  test_upscale.py
(+19 files in other folders)
