[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midjourney-mcp"
version = "0.1.0"
description = "Midjourney MCP Server — image & video generation via Discord"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "discord.py>=2.4.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mj_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
